improve "coinbase" task: add excel output option